# virtual_reality

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/openxr_ext_loader/: CMakeLists.txt
dependencies/openxr_ext_loader/src/: openxr_ext_loader.cpp  vulkan_ext_loader.cpp
dependencies/openxr_ext_loader/src/include/: openxr_ext_loader.h  vulkan_ext_loader.h
src/: Application.cpp  CMakeLists.txt  CheckerboardRenderer.hpp  ClearScreen.hpp  Context.cpp  EnvironmentRenderer.hpp  Geometry.cpp  SessionService.cpp  SpaceVisiualization.hpp  Types.hpp  VmaMemoryAllocator.cpp  VulkanContext.cpp  VulkanGraphicsService.cpp  WindowingSystem.cpp  main.cpp
src/include/: check.hpp  print.hpp  xr_struct_mapping.hpp
src/include/geom/: Geometry.hpp
src/include/io/: FileReader.hpp
src/include/util/: ExponentialBackoff.hpp  Units.hpp  collections.hpp  types.hpp  util.hpp
src/include/vr/: Action.hpp  Application.hpp  Context.hpp  Creation.hpp  Enumerators.hpp  Input.hpp  Layer.hpp  Models.hpp  Path.hpp  SessionConfig.hpp  SessionService.hpp  ToString.hpp  Transforms.hpp  WindowingSystem.hpp  XrDebuging.hpp  forwards.hpp
src/include/vr/graphics/: Graphics.hpp  Renderer.hpp
src/include/vr/graphics/vulkan/: Memory.hpp  MirrorSwapChain.hpp  VkEnumerators.hpp  VulkanContext.hpp  VulkanDebugMessenger.hpp  VulkanGraphicsService.hpp  VulkanRenderer.hpp  XrVulkanSwapChain.hpp
src/include/vr/specification/: ActionSetSpecification.hpp  ReferenceSpaceSpecification.hpp  Specifications.hpp  SwapchainSpecification.hpp
src/include/xform/: xforms.hpp
src/resources/shaders/: geom.frag  geom.vert
